<resources>
    <string name="app_name">Archery Training</string>
    <string name="commonRequiredValidationError">Required</string>
    <string name="common_integer_value_between">The value should be between %1$d and %2$d</string>
    <string name="commonDelete">Delete</string>
    <string name="common_confirmation_dialog_title">Confirmation</string>
    <string name="common_container_stats_showing_series">Serie %1$d to %2$d</string>
    <string name="common_help">Help</string>
    <string name="training_type_free">Free training</string>
    <string name="training_type_playoff">Playoffs</string>
    <string name="training_type_tournament">Tournament</string>
    <string name="training_type_retentions">Retentions</string>
    <string name="stats_view">View stats</string>
    <string name="stats_arrow_stats"># of arrows per score</string>
    <string name="stats_series_stats"># of series per score</string>
    <string name="stats_arrow_table_data">Arrows data</string>
    <string name="stats_series_table_data">Series data</string>
    <string name="stats_series_table_datatype">Data</string>
    <string name="stats_series_table_min">Min</string>
    <string name="stats_series_table_avg">Avg</string>
    <string name="stats_series_table_median">Median</string>
    <string name="stats_series_table_max">Max</string>
    <string name="stats_colors_stats"># of arrows per color</string>
    <string name="stats_yellow">Yellow</string>
    <string name="stats_red">Red</string>
    <string name="stats_blue">Blue</string>
    <string name="stats_black">Black</string>
    <string name="stats_white">White</string>
    <string name="stats_m">M</string>
    <string name="stats_share_image">Share</string>
    <string name="common_container_stats">
        <![CDATA[
        <html>
        <body>
        <p>
            Used to view the stats of a tournament/playff
        </p>
        <p>
            You can select the range of series you what to show the stats, and all the graphs
            are going to be updated
        </p>
        <p>
            On the target, the green dot indicates the center shot for all the arrows on the
            selected series, and the green circle indicates from the center shot how big is the
            group to include all the arrows.
        </p>
        </body>
        </html>

        ]]>
    </string>
    <string name="main_series">Series</string>
    <string name="main_retentions">Retentions</string>
    <string name="main_tournament">Tournament</string>
    <string name="main_playoff">Playoff</string>
    <string name="main_bow">Bow</string>
    <string name="main_timer">Timer</string>
    <string name="main_help">
        <![CDATA[
        <html>
        <body>
        <p>
            <strong>Series</strong>: can view the number of arrows shoot on any given period or used
            to load free training arrows
        </p>

        <p>
            <strong>Retentions</strong>: exercise where you have to keep the bow open for a given
            number of seconds and then rest the same number of seconds
        </p>
        <p>
            <strong>Tournament</strong>: load the tournament information (for real
            tournaments or the practice ones)
        </p>

        <p>
            <strong>Playoff</strong>: used to practice playoff. You could do it against
            the computer or against another human
        </p>
        <p>
            <strong>Bow</strong>: used to save the basic sight information of the bow
        </p>
        <p>
            <strong>Timer</strong>: you can configure the timer
        </p>

        </body>
        </html>

        ]]>
    </string>
    <string name="series_get_today_totals">See today\'s data</string>
    <string name="series_get_current_week_totals">See current week data</string>
    <string name="series_get_current_month_totals">See current month data</string>
    <string name="series_distance_totals_chart_description"># of arrows per distance</string>
    <string name="series_line_day_chart_description"># of arrows per day</string>
    <string name="series_line_hour_chart_description"># of arrows per hour</string>
    <string name="series_by_training_type_chart_description"># of arrows per training type</string>
    <string name="accumulated_label">Accumulated</string>
    <string name="per_time_period_label">Per time period</string>
    <string name="addSerieDistance">Distance</string>
    <string name="addSerieArrowsAmount">Arrows amount</string>
    <string name="addSerieAdd">Add</string>
    <string name="addSerieAdded">Added serie of %1$d arrows</string>
    <string name="addSerieDatetime">When</string>
    <string name="addSerieArrowsAmountTableHeader"># Arrows</string>
    <string name="addSerieTodayTotals">Today\'s totals</string>
    <string name="addSerieLastSerie">Last serie</string>
    <string name="series_stats_viewing_date_range">Viewing stats from %1$s until %2$s</string>
    <string name="series_stats_change_date_range">Change date range</string>
    <string name="series_help">
        <![CDATA[
        <html>
        <body>
        <p>
            Used to show the number of arrows shot at the difference distances. So you can check
            the number of shots done during today, week, month, etc.
        </p>
        <p>
            When using <strong>Tournaments</strong> or <strong>Playoff</strong>, the series are
            already loaded so you do not have to do that manually.
        </p>
        </body>
        </html>

        ]]>
    </string>
    <string name="seriesAmount">Series amount</string>
    <string name="repetitionsAmount">Number of repetitions</string>
    <string name="repetitionsDuration">Repetition duration</string>
    <string name="seriesSleepTime">Rest during repetition</string>
    <string name="startIn">Start in</string>
    <string name="buttonStart">Start</string>
    <string name="button_stop">Stop</string>
    <string name="serieInfo">Current serie</string>
    <string name="repetitionsInfo">Current repetition</string>
    <string name="status">Status</string>
    <string name="runningStatus">Open bow</string>
    <string name="restStatus">Resting</string>
    <string name="stoppedStatus">Stop</string>
    <string name="finishedStatus">Finished</string>
    <string name="waitingToStart">Waiting...</string>
    <string name="retentions_serie_index">%1$d / %2$d</string>
    <string name="retentions_repetitions_index">%1$d / %2$d</string>
    <string name="finishedSerie">Finished serie</string>
    <string name="downBow">Down</string>
    <string name="upBow">Up</string>
    <string name="tournament_name">Name</string>
    <string name="tournament_start">Start</string>
    <string name="tournament_default_name">Training</string>
    <string name="tournament_is_tournament">Is tournament?</string>
    <string name="tournament_type">Tournament Type</string>
    <string name="tournament_existing_name">Name: %1s</string>
    <string name="tournament_serie_index">Serie</string>
    <string name="tournament_serie_current_serie">Serie %1$d</string>
    <string name="tournament_serie_current_round">Round %1$d</string>
    <string name="tournament_serie_next">Next</string>
    <string name="tournament_serie_previous">Previous</string>
    <string name="tournament_serie_undo">Undo</string>
    <string name="tournament_serie_end">End</string>
    <string name="tournament_confirm_delete_tournament">Do you want to delete this tournament?</string>
    <string name="tournament_view_score_sheet">View score sheet</string>
    <string name="tournament_view_arrow_stats">View stats</string>
    <string name="tournament_view_tournament_delete">Delete</string>
    <string name="tournament_view_serie_creating_back">If you got back this incomplete serie is going to be deleted. Are you sure?</string>
    <string name="tournament_view_stats_arrow_chart_description"># of arrows per score</string>
    <string name="tournament_view_stats_color_chart_description"># of arrows per color</string>
    <string name="tournament_view_stats_series_chart_description">Score per serie</string>
    <string name="tournament_view_stats_serie">Serie</string>
    <string name="tournament_view_stats_arrow">Arrow</string>
    <string name="tournament_view_stats_datatype">Data</string>
    <string name="tournament_view_stats_min">Min</string>
    <string name="tournament_view_stats_avg">Avg</string>
    <string name="tournament_view_stats_median">Median</string>
    <string name="tournament_view_stats_max">Max</string>
    <string name="tournament_general_help">
        <![CDATA[
        <html>
        <body>
        <p>
            Used to create a new tournament. It can be used on real tournament or
            just in practice one were you want to keep an score.
        </p>
        <p>
            The <strong>View stats</strong> option is used to show the stats for
            all the tournaments, but you can view the stats for one tournament
            specially when viewing it\'s details
        </p>
        </body>
        </html>

        ]]>
    </string>
    <string name="tournament_view_serie_help">
        <![CDATA[
        <html>
        <body>
        <p>
            Used to view the existing serie or to create a serie in the tournament.
        </p>
        <p>
            You can mark the impact by clicking on the target face and moving to put
            the impact on the corresponding place. The current impact is the burdeax point
            that you move.
        </p>
        <p>
            The green circles indicates that the number of arrows that should be marked
            on the target, and once that all the arrows are marked you can go the next
            serie (or view the previous serie)
        </p>
        </body>
        </html>

        ]]>
    </string>
    <string name="tournament_show_existing_help">
        <![CDATA[
        <html>
        <body>
        <p>
            You can view the tournament information, and it\'s stats, or view the serie
            target impacts if you click on it
        </p>
        </body>
        </html>

        ]]>
    </string>
    <string name="playoff_opponent_type">Opponent type</string>
    <string name="playoff_opponent_type_computer">Computer</string>
    <string name="playoff_opponent_type_human">Human</string>
    <string name="playoff_opponent_score_required">Opponent\'s serie score is required</string>
    <string name="playoff_opponent_name">Opponent\'s name</string>
    <string name="playoff_min_score">Min serie score</string>
    <string name="playoff_max_score">Max serie score</string>
    <string name="playoff_computer_name">Computer</string>
    <string name="playoff_confirm_delete_playoff">Do you want to delete this playoff?</string>
    <string name="playoff_start">Start</string>
    <string name="playoff_serie_score">%1$d - %2$d</string>
    <string name="playoff_error_creating_max_value_30">The value should be 30 or smaller</string>
    <string name="playoff_error_creating_min_greater_max">The min value should be smaller or equal than the max</string>
    <string name="bow_name">Name</string>
    <string name="bow_add_sight_value">Add new sight value</string>
    <string name="bow_save">Save</string>
    <string name="timer_time">Seconds</string>
    <string name="timer_change_at_seconds">Change background at</string>
    <string name="timer_start_in">Start in</string>
    <string name="timer_voice_count_down">Count down from</string>
</resources>