<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/tournament_type"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

                <Spinner
                    android:id="@+id/tournament_constrains"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </TableRow>
        </TableLayout>




        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:id="@+id/playoff_stats_table_data">
            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/stats_series_table_datatype" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/stats_series_table_min" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/stats_series_table_avg" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/stats_series_table_median" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/stats_series_table_max" />
            </TableRow>
        </TableLayout>

        <TextView
            android:paddingTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_arrow_stats"
            />
        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/playoff_stats_arrow_stats"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            />

        <TextView
            android:paddingTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_series_stats"
            />
        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/playoff_stats_series_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:paddingTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_colors_stats"
            />
        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/playoff_stats_color_stats"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            />
    </LinearLayout>
</ScrollView>