<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/serie_add_table_layout"
    android:stretchColumns="*"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    >


    <TableRow android:layout_width="match_parent">

        <TextView
            android:padding="3dip"
            android:text="@string/addSerieDistance" />

        <EditText
            android:id="@+id/distance"
            android:gravity="end"
            android:layout_weight="1"
            android:inputType="number" />

    </TableRow>

    <TableRow android:layout_width="match_parent">

        <TextView
            android:padding="3dip"
            android:text="@string/addSerieArrowsAmount" />

        <EditText
            android:id="@+id/arrowsAmount"
            android:gravity="end"
            android:inputType="number"
            android:layout_weight="1"
            android:imeOptions="actionDone" />
    </TableRow>


    <TableRow android:layout_width="match_parent">

        <Button
            android:id="@+id/addNewSerie"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:onClick="addNewSerie"
            android:text="@string/addSerieAdd" />
    </TableRow>




    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/addSerieTodayTotals" />

        <TextView
            android:id="@+id/todayTotals"
            android:padding="3dip" />
    </TableRow>

    <TableRow android:layout_width="match_parent">

        <TextView
            android:layout_weight="1"
            android:padding="3dip"
            android:text="@string/addSerieLastSerie"
            android:textAlignment="center" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/addSerieDistance" />

        <TextView
            android:padding="3dip"
            android:text="@string/addSerieArrowsAmountTableHeader" />

        <TextView
            android:padding="3dip"
            android:text="@string/addSerieDatetime" />
    </TableRow>


    <TableRow>
        <TextView
            android:id="@+id/lastDistance"
            android:padding="3dip" />

        <TextView
            android:id="@+id/lastArrowsAmount"
            android:padding="3dip" />

        <TextView
            android:id="@+id/lastDatetime"
            android:padding="3dip" />
    </TableRow>


</TableLayout>



