<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    >

    <TableRow android:paddingTop="2dp">

        <TextView
            android:padding="3dip"
            android:text="@string/tournament_type" />

        <Spinner
            android:id="@+id/tournament_constrains"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow android:paddingTop="10dp">

        <TextView
            android:padding="3dip"
            android:text="@string/playoff_opponent_type" />

        <Spinner
            android:id="@+id/opponent_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>


    <TableRow android:id="@+id/opponent_name_row">
        <TextView
            android:text="@string/playoff_opponent_name"
            android:padding="3dip" />

        <EditText
            android:id="@+id/opponent_name"
            android:gravity="right"
            />
    </TableRow>

    <TableRow android:id="@+id/min_score_row">
        <TextView
            android:text="@string/playoff_min_score"
            android:padding="3dip" />

        <EditText
            android:id="@+id/min_socre"
            android:gravity="right"
            android:inputType="number"
            />
    </TableRow>

    <TableRow android:id="@+id/max_score_row">
        <TextView
            android:text="@string/playoff_max_score"
            android:padding="3dip" />

        <EditText
            android:id="@+id/max_socre"
            android:gravity="right"
            android:inputType="number"
            />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        >
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:onClick="addPlayoff"
            android:layout_weight="1"
            android:text="@string/playoff_start"
            />
    </TableRow>
</TableLayout>




