<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    >

    <TableRow>
        <TextView
            android:text="@string/timer_time"
            android:padding="3dip" />

        <EditText
            android:id="@+id/timer_time"
            android:gravity="right"
            android:inputType="number"
            android:text="120"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/timer_change_at_seconds"
            android:padding="3dip" />

        <EditText
            android:id="@+id/timer_change_at_seconds"
            android:gravity="right"
            android:inputType="number"
            android:text="30"
            />
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/timer_start_in"
            android:padding="3dip" />

        <EditText
            android:id="@+id/timer_start_in"
            android:gravity="right"
            android:inputType="number"
            android:text="0"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/timer_voice_count_down"
            android:padding="3dip" />

        <EditText
            android:id="@+id/timer_voice_count_down"
            android:gravity="right"
            android:inputType="number"
            android:text="0"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        >
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:onClick="startRetentions"
            android:layout_weight="1"
            android:text="@string/buttonStart"
            />
    </TableRow>
</TableLayout>




