<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


    <TextView
        android:padding="3dip"
        android:text="@string/tournament_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/name"
        android:gravity="start"
        android:text="@string/tournament_default_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:paddingTop="20dp"
        android:paddingStart="3dp"
        android:paddingLeft="3dp"
        android:text="@string/tournament_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/tournament_constrains"
        android:prompt="@string/tournament_type"
        android:spinnerMode="dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <TextView
        android:paddingTop="20dp"
        android:paddingStart="3dp"
        android:paddingLeft="3dp"
        android:text="@string/tournament_is_tournament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:gravity="end"
        android:checked="false"
        android:id="@+id/is_tournament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createTournament"
        android:text="@string/tournament_start" />


    </LinearLayout>
</ScrollView>