<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/todayRawData"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    >

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/addSerieDistance" />

        <TextView
            android:padding="3dip"
            android:text="@string/addSerieArrowsAmountTableHeader" />

        <TextView
            android:padding="3dip"
            android:text="@string/addSerieDatetime" />

        <TextView
            android:padding="3dip"
            android:text="@string/todayRawDataDelete" />
    </TableRow>

</TableLayout></ScrollView>