<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/existing_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    >


    <TableRow android:id="@+id/name_row">
        <TextView
            android:text="@string/bow_name"
            android:padding="3dip" />

        <EditText
            android:id="@+id/bow_name"
            android:gravity="right"
            android:text="70"
            />
    </TableRow>



    <TableRow
        android:layout_width="match_parent"
        >
        <Button
            android:id="@+id/add_distance"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/bow_add_sight_value"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        >
        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/bow_save"
            />
    </TableRow>
</TableLayout>