<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tournament_series_showing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.appyvet.materialrangebar.RangeBar
            android:id="@+id/tournament_series_rangebar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tournament_stats_table_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            >
            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/tournament_view_stats_datatype" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/tournament_view_stats_min" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/tournament_view_stats_avg" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/tournament_view_stats_median" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/tournament_view_stats_max" />
            </TableRow>

        </TableLayout>

        <ImageView
            android:id="@+id/photo_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/complete_archery_target"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            />


        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/tournament_series_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/tournament_stats_table_data" />

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/tournament_arrows_horizontal_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/tournament_series_chart"
            />

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/tournament_color_horizontal_chart"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/tournament_arrows_horizontal_chart"
            />
    </LinearLayout>
</ScrollView>
